crates/ebpf-verifier/tests/snapshots/trace_snapshot__trace_schema_map_guarded.snap
---
source: crates/ebpf-verifier/tests/trace_snapshot.rs
assertion_line: 64
expression: "trace_json_maps(\"map_guarded_value_access.bin\")"
---
[
  {
    "pc": 0,
    "insns": "0   r1 = 0x1",
    "regs": [
      {
        "r": 0,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 1,
        "type": "scalar",
        "range": [
          1,
          1
        ],
        "offset": null
      },
      {
        "r": 2,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 3,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 4,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 5,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 6,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 7,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 8,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 9,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 10,
        "type": "stack_ptr",
        "range": null,
        "offset": 0
      }
    ],
    "stack_init": [],
    "action": "r1 = 0x1"
  },
  {
    "pc": 1,
    "insns": "2   mov r2, r10",
    "regs": [
      {
        "r": 0,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 1,
        "type": "scalar",
        "range": [
          1,
          1
        ],
        "offset": null
      },
      {
        "r": 2,
        "type": "stack_ptr",
        "range": null,
        "offset": 0
      },
      {
        "r": 3,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 4,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 5,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 6,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 7,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 8,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 9,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 10,
        "type": "stack_ptr",
        "range": null,
        "offset": 0
      }
    ],
    "stack_init": [],
    "action": "r2 mov= r10"
  },
  {
    "pc": 2,
    "insns": "3   add r2, -8",
    "regs": [
      {
        "r": 0,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 1,
        "type": "scalar",
        "range": [
          1,
          1
        ],
        "offset": null
      },
      {
        "r": 2,
        "type": "stack_ptr",
        "range": null,
        "offset": -8
      },
      {
        "r": 3,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 4,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 5,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 6,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 7,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 8,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 9,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 10,
        "type": "stack_ptr",
        "range": null,
        "offset": 0
      }
    ],
    "stack_init": [],
    "action": "r2 add= -8"
  },
  {
    "pc": 3,
    "insns": "4   *(w *)(r10 + -8) = 1",
    "regs": [
      {
        "r": 0,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 1,
        "type": "scalar",
        "range": [
          1,
          1
        ],
        "offset": null
      },
      {
        "r": 2,
        "type": "stack_ptr",
        "range": null,
        "offset": -8
      },
      {
        "r": 3,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 4,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 5,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 6,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 7,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 8,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 9,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 10,
        "type": "stack_ptr",
        "range": null,
        "offset": 0
      }
    ],
    "stack_init": [],
    "action": "*(w *)(r10 + -8) = 1"
  },
  {
    "pc": 4,
    "insns": "5   call 1",
    "regs": [
      {
        "r": 0,
        "type": "maybe_map_ptr",
        "range": null,
        "offset": null
      },
      {
        "r": 1,
        "type": "scalar",
        "range": [
          1,
          1
        ],
        "offset": null
      },
      {
        "r": 2,
        "type": "stack_ptr",
        "range": null,
        "offset": -8
      },
      {
        "r": 3,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 4,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 5,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 6,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 7,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 8,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 9,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 10,
        "type": "stack_ptr",
        "range": null,
        "offset": 0
      }
    ],
    "stack_init": [],
    "action": "call 1"
  },
  {
    "pc": 5,
    "insns": "6   jeq r0, 0, +3",
    "regs": [
      {
        "r": 0,
        "type": "maybe_map_ptr",
        "range": null,
        "offset": null
      },
      {
        "r": 1,
        "type": "scalar",
        "range": [
          1,
          1
        ],
        "offset": null
      },
      {
        "r": 2,
        "type": "stack_ptr",
        "range": null,
        "offset": -8
      },
      {
        "r": 3,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 4,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 5,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 6,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 7,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 8,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 9,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 10,
        "type": "stack_ptr",
        "range": null,
        "offset": 0
      }
    ],
    "stack_init": [],
    "action": "jeq r0, 0, +3"
  },
  {
    "pc": 9,
    "insns": "10  exit",
    "regs": [
      {
        "r": 0,
        "type": "scalar",
        "range": [
          0,
          0
        ],
        "offset": null
      },
      {
        "r": 1,
        "type": "scalar",
        "range": [
          1,
          1
        ],
        "offset": null
      },
      {
        "r": 2,
        "type": "stack_ptr",
        "range": null,
        "offset": -8
      },
      {
        "r": 3,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 4,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 5,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 6,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 7,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 8,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 9,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 10,
        "type": "stack_ptr",
        "range": null,
        "offset": 0
      }
    ],
    "stack_init": [],
    "action": "exit"
  },
  {
    "pc": 6,
    "insns": "7   *(w *)(r0 + 4) = 4660",
    "regs": [
      {
        "r": 0,
        "type": "map_ptr",
        "range": null,
        "offset": null
      },
      {
        "r": 1,
        "type": "scalar",
        "range": [
          1,
          1
        ],
        "offset": null
      },
      {
        "r": 2,
        "type": "stack_ptr",
        "range": null,
        "offset": -8
      },
      {
        "r": 3,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 4,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 5,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 6,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 7,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 8,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 9,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 10,
        "type": "stack_ptr",
        "range": null,
        "offset": 0
      }
    ],
    "stack_init": [],
    "action": "*(w *)(r0 + 4) = 4660"
  },
  {
    "pc": 7,
    "insns": "8   r3 = *(w *)(r0 + 4)",
    "regs": [
      {
        "r": 0,
        "type": "map_ptr",
        "range": null,
        "offset": null
      },
      {
        "r": 1,
        "type": "scalar",
        "range": [
          1,
          1
        ],
        "offset": null
      },
      {
        "r": 2,
        "type": "stack_ptr",
        "range": null,
        "offset": -8
      },
      {
        "r": 3,
        "type": "unknown",
        "range": null,
        "offset": null
      },
      {
        "r": 4,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 5,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 6,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 7,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 8,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 9,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 10,
        "type": "stack_ptr",
        "range": null,
        "offset": 0
      }
    ],
    "stack_init": [],
    "action": "r3 = *(w *)(r0 + 4)"
  },
  {
    "pc": 8,
    "insns": "9   mov r0, r3",
    "regs": [
      {
        "r": 0,
        "type": "unknown",
        "range": null,
        "offset": null
      },
      {
        "r": 1,
        "type": "scalar",
        "range": [
          1,
          1
        ],
        "offset": null
      },
      {
        "r": 2,
        "type": "stack_ptr",
        "range": null,
        "offset": -8
      },
      {
        "r": 3,
        "type": "unknown",
        "range": null,
        "offset": null
      },
      {
        "r": 4,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 5,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 6,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 7,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 8,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 9,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 10,
        "type": "stack_ptr",
        "range": null,
        "offset": 0
      }
    ],
    "stack_init": [],
    "action": "r0 mov= r3"
  },
  {
    "pc": 9,
    "insns": "10  exit",
    "regs": [
      {
        "r": 0,
        "type": "unknown",
        "range": null,
        "offset": null
      },
      {
        "r": 1,
        "type": "scalar",
        "range": [
          1,
          1
        ],
        "offset": null
      },
      {
        "r": 2,
        "type": "stack_ptr",
        "range": null,
        "offset": -8
      },
      {
        "r": 3,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 4,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 5,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 6,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 7,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 8,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 9,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 10,
        "type": "stack_ptr",
        "range": null,
        "offset": 0
      }
    ],
    "stack_init": [],
    "action": "exit"
  }
]
