crates/ebpf-verifier/tests/snapshots/trace_snapshot__trace_schema_map_ptr.snap
---
source: crates/ebpf-verifier/tests/trace_snapshot.rs
assertion_line: 56
expression: "trace_json_maps(\"map_hash_lookup.bin\")"
---
[
  {
    "pc": 0,
    "insns": "0   r1 = 0x1",
    "regs": [
      {
        "r": 0,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 1,
        "type": "scalar",
        "range": [
          1,
          1
        ],
        "offset": null
      },
      {
        "r": 2,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 3,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 4,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 5,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 6,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 7,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 8,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 9,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 10,
        "type": "stack_ptr",
        "range": null,
        "offset": 0
      }
    ],
    "stack_init": [],
    "action": "r1 = 0x1"
  },
  {
    "pc": 1,
    "insns": "2   mov r2, r10",
    "regs": [
      {
        "r": 0,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 1,
        "type": "scalar",
        "range": [
          1,
          1
        ],
        "offset": null
      },
      {
        "r": 2,
        "type": "stack_ptr",
        "range": null,
        "offset": 0
      },
      {
        "r": 3,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 4,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 5,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 6,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 7,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 8,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 9,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 10,
        "type": "stack_ptr",
        "range": null,
        "offset": 0
      }
    ],
    "stack_init": [],
    "action": "r2 mov= r10"
  },
  {
    "pc": 2,
    "insns": "3   add r2, -8",
    "regs": [
      {
        "r": 0,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 1,
        "type": "scalar",
        "range": [
          1,
          1
        ],
        "offset": null
      },
      {
        "r": 2,
        "type": "stack_ptr",
        "range": null,
        "offset": -8
      },
      {
        "r": 3,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 4,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 5,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 6,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 7,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 8,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 9,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 10,
        "type": "stack_ptr",
        "range": null,
        "offset": 0
      }
    ],
    "stack_init": [],
    "action": "r2 add= -8"
  },
  {
    "pc": 3,
    "insns": "4   *(w *)(r10 + -8) = 1",
    "regs": [
      {
        "r": 0,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 1,
        "type": "scalar",
        "range": [
          1,
          1
        ],
        "offset": null
      },
      {
        "r": 2,
        "type": "stack_ptr",
        "range": null,
        "offset": -8
      },
      {
        "r": 3,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 4,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 5,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 6,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 7,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 8,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 9,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 10,
        "type": "stack_ptr",
        "range": null,
        "offset": 0
      }
    ],
    "stack_init": [],
    "action": "*(w *)(r10 + -8) = 1"
  },
  {
    "pc": 4,
    "insns": "5   call 1",
    "regs": [
      {
        "r": 0,
        "type": "map_ptr",
        "range": null,
        "offset": null
      },
      {
        "r": 1,
        "type": "scalar",
        "range": [
          1,
          1
        ],
        "offset": null
      },
      {
        "r": 2,
        "type": "stack_ptr",
        "range": null,
        "offset": -8
      },
      {
        "r": 3,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 4,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 5,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 6,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 7,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 8,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 9,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 10,
        "type": "stack_ptr",
        "range": null,
        "offset": 0
      }
    ],
    "stack_init": [],
    "action": "call 1"
  },
  {
    "pc": 5,
    "insns": "6   *(dw *)(r10 + -16) = r0",
    "regs": [
      {
        "r": 0,
        "type": "map_ptr",
        "range": null,
        "offset": null
      },
      {
        "r": 1,
        "type": "scalar",
        "range": [
          1,
          1
        ],
        "offset": null
      },
      {
        "r": 2,
        "type": "stack_ptr",
        "range": null,
        "offset": -8
      },
      {
        "r": 3,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 4,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 5,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 6,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 7,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 8,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 9,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 10,
        "type": "stack_ptr",
        "range": null,
        "offset": 0
      }
    ],
    "stack_init": [
      {
        "offset": -16,
        "value": "unknown"
      }
    ],
    "action": "*(dw *)(r10 + -16) = r0"
  },
  {
    "pc": 6,
    "insns": "7   exit",
    "regs": [
      {
        "r": 0,
        "type": "map_ptr",
        "range": null,
        "offset": null
      },
      {
        "r": 1,
        "type": "scalar",
        "range": [
          1,
          1
        ],
        "offset": null
      },
      {
        "r": 2,
        "type": "stack_ptr",
        "range": null,
        "offset": -8
      },
      {
        "r": 3,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 4,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 5,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 6,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 7,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 8,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 9,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 10,
        "type": "stack_ptr",
        "range": null,
        "offset": 0
      }
    ],
    "stack_init": [
      {
        "offset": -16,
        "value": "unknown"
      }
    ],
    "action": "exit"
  }
]
